deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-admin-svc  
spec:
  selector:
    app: front-admin 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
