deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-admin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: fron.lumonidy.studio
    http:
      paths:
      - backend:
          service:
            name: fron-admin-svc
            port:
              number: 80
        pathType: Prefix
        path: /
  #tls:
  - hosts: 
    - fron.lumonidy.studio
    secretName: front-1-tls
